--- a/MM Systems/PanoramaApp3/PanoramaApp3/Pages/CircumstancesPage.xaml
+++ b/MM Systems/PanoramaApp3/PanoramaApp3/Pages/CircumstancesPage.xaml
@@ -40,7 +40,7 @@
                     </toolkit:ListPicker.ItemTemplate>
                 </toolkit:ListPicker>
                 <TextBlock Text="Weersomstandigheden"></TextBlock>
-                <toolkit:ListPicker x:Name="lpweersomstandigheden" ItemsSource="{Binding}" SelectionChanged="Lpweersomstandigheden_OnSelectionChanged">
+                <toolkit:ListPicker x:Name="lpweersomstandigheden" ItemsSource="{Binding}">
                     <toolkit:ListPicker.ItemTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding Omschrijving}"></TextBlock>
