--- a/MM Systems/PanoramaApp3/PanoramaApp3/Pages/CircumstancesPage.xaml
+++ b/MM Systems/PanoramaApp3/PanoramaApp3/Pages/CircumstancesPage.xaml
@@ -19,7 +19,7 @@
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
 
         <!--TitlePanel contains the name of the application and page title-->
@@ -29,7 +29,7 @@
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
-        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
+        <Grid x:Name="ContentPanel" Grid.Row="1">
             <StackPanel>
                 <TextBlock Text="Nachtrust"/>
                 <toolkit:ListPicker x:Name="lpnachtrust" ItemsSource="{Binding}" SelectionChanged="Lpnachtrust_OnSelectionChanged">
