--- a/MM Systems/WebApp/WebApp/MainPage.xaml
+++ b/MM Systems/WebApp/WebApp/MainPage.xaml
@@ -1,5 +1,6 @@
 ﻿<UserControl
     x:Class="WebApp.MainPage"
+    x:Name="HomePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:navigation="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Navigation" 
@@ -11,7 +12,7 @@
 >
 
     <Grid x:Name="LayoutRoot" Style="{StaticResource LayoutRootGridStyle}">
-
+        
         <Border x:Name="ContentBorder" Style="{StaticResource ContentBorderStyle}">
             
             <navigation:Frame x:Name="ContentFrame" Style="{StaticResource ContentFrameStyle}" 
