--- a/MM Systems/PanoramaApp3/PanoramaApp3/Pages/CommentPage.xaml
+++ b/MM Systems/PanoramaApp3/PanoramaApp3/Pages/CommentPage.xaml
@@ -22,14 +22,13 @@
 
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock Text="MY APPLICATION" Style="{StaticResource PhoneTextNormalStyle}"/>
-            <TextBlock Text="page name" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+            <TextBlock Text="Commentaar" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
             <StackPanel>
-                <TextBlock Text="Commentaar" HorizontalAlignment="Center"/>
+                <TextBlock Text="niet verplicht" HorizontalAlignment="Center"/>
                 <TextBox x:Name="txt_Commentaar" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible" MinHeight="300" />
                 <Button x:Name="btnok" Content="ok" Click="btnok_Click"></Button>
             </StackPanel>
