--- a/MM Systems/WebApp/WebApp/Views/Login.xaml
+++ b/MM Systems/WebApp/WebApp/Views/Login.xaml
@@ -1,4 +1,4 @@
-﻿<navigation:Page x:Class="WebApp.Views.empty" 
+﻿<navigation:Page x:Class="WebApp.Views.Login" 
            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
            xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,10 +6,9 @@
            mc:Ignorable="d"
            xmlns:navigation="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Navigation"
            d:DesignWidth="640" d:DesignHeight="480"
-           Title="empty Page">
-    <Grid x:Name="LayoutRoot" Style="{StaticResource LayoutRootGridStyle}">
-        <Border VerticalAlignment="Center" HorizontalAlignment="Center" BorderBrush="Black" BorderThickness="1">
-            <Grid VerticalAlignment="Center" HorizontalAlignment="Center" Margin="30">
+           Title="Login Page">
+    <Grid x:Name="LayoutRoot">
+            <Grid x:Name="grid_Login" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="30">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
@@ -33,17 +32,15 @@
                               Margin="5 5"
                              Password="{Binding Password, Mode=TwoWay}" KeyUp="txtPassword_KeyUp" />
                 <StackPanel Grid.Column="2" Grid.Row="2"
+                            MinWidth="100"
                             Orientation="Horizontal"
                             Margin="5 5"
                             VerticalAlignment="Top" HorizontalAlignment="Left">
-                    <Button Margin="20 0 2 0"
+                    <Button Margin="20 0 2 0" HorizontalAlignment="Left"
                             Content="Login" Click="Login_Click" 
                             />
-                    <Button    Margin="10 0"
-                            HorizontalAlignment="Center"
-                            Content="Cancel"  Click="Cancel_Click"/>
+                   
                 </StackPanel>
             </Grid>
-        </Border>
     </Grid>
 </navigation:Page>
