added progress indicator when loading the data for the comboboxes and disabled the buttons when not everything is laoded

--- a/MM Systems/PanoramaApp3/PanoramaApp3/Pages/CircumstancesPage.xaml
+++ b/MM Systems/PanoramaApp3/PanoramaApp3/Pages/CircumstancesPage.xaml
@@ -48,7 +48,7 @@
                 </toolkit:ListPicker>
                 <TextBlock Text="Aantal uur geslapen"/>
                 <controls2:TimeSpanPicker x:Name="txtuurgeslapen" Step="1:00" ValueStringFormat="{}{0:h}" HorizontalAlignment="Left" ValueChanged="Txtuurgeslapen_OnValueChanged"/>
-                <Button Content="Oke" Click="ButtonBase_OnClick"></Button>
+                <Button x:Name="ButtonOk" Content="Oke" Click="ButtonBase_OnClick"></Button>
             </StackPanel>
         </Grid>
     </Grid>
