--- a/MM Systems/PanoramaApp3/PanoramaApp3/Pages/Settings.xaml
+++ b/MM Systems/PanoramaApp3/PanoramaApp3/Pages/Settings.xaml
@@ -22,7 +22,7 @@
 
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock Text="AppName" Style="{StaticResource PhoneTextNormalStyle}"/>
+            <TextBlock Text="MS Patient" Style="{StaticResource PhoneTextNormalStyle}"/>
             <TextBlock Text="Aanmelden" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
 
